--- a/foundation/index.html
+++ b/foundation/index.html
@@ -9,12 +9,15 @@
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
 
-  <title>Welcome to Foundation</title>
+  <title>Sign up for Alveion now!</title>
   
   <!-- Included CSS Files (Uncompressed) -->
   <!--
   <link rel="stylesheet" href="stylesheets/foundation.css">
   -->
+  
+  <!-- Google Webfonts -->
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
   
   <!-- Included CSS Files (Compressed) -->
   <link rel="stylesheet" href="stylesheets/lib/foundation.min.css">
@@ -31,14 +34,15 @@
 
       <nav class="top-bar contain-to-grid">
         <ul>
-          <li class="name"><h1><a href="#">Title</a></h1></li>
+          <li class="name"><h1><a href="#">@gNosis</a></h1></li>
           <li class="toggle-topbar"><a href="#"></a></li>
         </ul>
 
         <section>
           <ul class="left">
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 2</a></li>
+              <li><a href="#">Sign Up!</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Support</a></li>
           </ul>
 
           <ul class="right">
