--- a/foundation/index.html
+++ b/foundation/index.html
@@ -25,6 +25,18 @@
 
   <script src="javascripts/lib/modernizr.foundation.js"></script>
 </head>
+
+  <script src="javascripts/lib/jquery.js"></script>
+  <script src="javascripts/lib/jquery.foundation.orbit.js"></script>
+  <script src="javascripts/lib/modernizr.foundation.js"></script>
+  <script src="javascripts/app/app.js"></script>
+  <script type="text/javascript">
+
+  $(window).load(function() {
+    $('#slider').orbit();
+  });
+  </script>
+  
 <body>
  
   <div class="row">
@@ -52,15 +64,14 @@
   <!-- First Band (Slider) -->
   <!-- The Orbit slider is initialized at the bottom of the page by calling .orbit() on #slider -->
     
-  <div class="row">
+   <div class="row">
     <div class="twelve columns">
       <div id="slider">
         <img src="images/slider1.png" />
-        <img src="http://placehold.it/1000x400&text=[img 2]" />
-        <img src="http://placehold.it/1000x400&text=[img 3]" />
+        <img src="images/slider2.png" />
+        <img src="images/slider3.png" />
       </div>
-      
-      <hr />
+    <hr />
     </div>
   </div>
   
