--- a/foundation/faq.html
+++ b/foundation/faq.html
@@ -20,6 +20,7 @@
   <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
   
   <!-- Included CSS Files (Compressed) -->
+  <link rel="stylesheet" href="stylesheets/app/reset.css">
   <link rel="stylesheet" href="stylesheets/lib/foundation.min.css">
   <link rel="stylesheet" href="stylesheets/app/app.css">
 
