finished adding content to main page of bootstrap project. Altered nav on foundation/index.html to match color universally across all versions.

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Template &middot; Bootstrap</title>
+    <title>Sign up for Alveion now!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="Fareed Warrad" content="">
@@ -33,16 +33,14 @@
 
       <div class="masthead">
         <h3 class="muted"><img src="images/logo.png" /></h3>
-        <div class="navbar">
-          <div class="navbar-inner">
+        <div class="nav nav-pills">
+          <div class="nav nav-pills-inner">
             <div class="container">
-              <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Downloads</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+              <ul class="nav nav-pills">
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Service Plan</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Sign Up!</a></li>
               </ul>
             </div>
           </div>
@@ -78,19 +76,37 @@
       <!-- Rows & Columns -->
       <div class="row-fluid">
         <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <img src="images/serviceplan1.png" />
+          <h2>RemoteAssist Unlimited</h2>
+            <p>Single PC</p>
+            <p>Unlimited Connections</p>
+            <p>Unlmiited Phone Support</p>
+            <p>You Control the Schedule!</p>
+            <p>Free 14 Day Trial</p>
+            <p>No Contract, Cancel Anytime!</p>
+            <p><a class="btn" href="#">View details &raquo;</a></p>
         </div>
         <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <img src="images/serviceplan2.png" />
+          <h2>RemoteAssist Pay-As-You-Go</h2>
+            <p>Single PC</p>
+            <p>Software Issues</p>
+            <p>Virus/Malware Removal</p>
+            <p>Windows Support</p>
+            <p>No Solution, No Charge</p> 
+            <p>&nbsp</p>
+            <p><a class="btn" href="#">View details &raquo;</a></p>
        </div>
         <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <img src="images/serviceplan3.png" />
+          <h2>RemoteAssist Biz Unlimited</h2>
+            <p>Two PCs</p>
+            <p>Unlimited Connections</p>
+            <p>Unlmiited Phone Support</p>
+            <p>You Control the Schedule!</p>
+            <p>Free 14 Day Trial</p>
+            <p>No Contract, Cancel Anytime!</p>          
+            <p><a class="btn" href="#">View details &raquo;</a></p>
         </div>
       </div>
 
@@ -106,8 +122,20 @@
       <hr>
       
       <div class="footer">
-        <p>&copy; Company 2013</p>
+        <p>&copy; Copyright 2013 @gNosis.</p>
       </div>
+      <div class="nav nav-pills">
+          <div class="nav nav-pills-inner">
+            <div class="container">
+              <ul class="nav nav-pills">
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Service Plan</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Sign Up!</a></li>
+              </ul>
+            </div>
+          </div>
+        </div><!-- /.navbar -->
 
     </div> <!-- /container -->
 
