--- a/foundation/index.html
+++ b/foundation/index.html
@@ -49,7 +49,7 @@
       <h1><img src="images/logo.png" /></h1>
     </div>
     <div class="nine columns">
-      <ul class="nav-bar right">
+      <ul class="link-list right">
         <li><a href="#">Sign Up!</a></li>
         <li><a href="#">FAQ</a></li>
         <li><a href="#">Service Plans</a></li>
