--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -11,7 +11,6 @@
     <!-- Le styles -->
     <link  href="stylesheets/app/bootstrap.css" rel="stylesheet">
     <link href="stylesheets/app/app.css" rel="stylesheet">
-
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -139,22 +138,22 @@
 
     </div> <!-- /container -->
 
-    <!-- Le javascript
+    <!-- Le javascript --!>
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../assets/js/jquery.js"></script>
-    <script src="../assets/js/bootstrap-transition.js"></script>
-    <script src="../assets/js/bootstrap-alert.js"></script>
-    <script src="../assets/js/bootstrap-modal.js"></script>
-    <script src="../assets/js/bootstrap-dropdown.js"></script>
-    <script src="../assets/js/bootstrap-scrollspy.js"></script>
-    <script src="../assets/js/bootstrap-tab.js"></script>
-    <script src="../assets/js/bootstrap-tooltip.js"></script>
-    <script src="../assets/js/bootstrap-popover.js"></script>
-    <script src="../assets/js/bootstrap-button.js"></script>
-    <script src="../assets/js/bootstrap-collapse.js"></script>
-    <script src="../assets/js/bootstrap-carousel.js"></script>
-    <script src="../assets/js/bootstrap-typeahead.js"></script>
-
+    <script src="javascripts/lib/jquery.js"></script>
+    <script src="javascripts/lib/bootstrap-transition.js"></script>
+    <script src="javascripts/lib/bootstrap-alert.js"></script>
+    <script src="javascripts/lib/bootstrap-modal.js"></script>
+    <script src="javascripts/lib/bootstrap-dropdown.js"></script>
+    <script src="javascripts/lib/bootstrap-scrollspy.js"></script>
+    <script src="javascripts/lib/bootstrap-tab.js"></script>
+    <script src="javascripts/lib/bootstrap-tooltip.js"></script>
+    <script src="javascripts/lib/bootstrap-popover.js"></script>
+    <script src="javascripts/lib/bootstrap-button.js"></script>
+    <script src="javascripts/lib/bootstrap-collapse.js"></script>
+    <script src="javascripts/lib/bootstrap-carousel.js"></script>
+    <script src="javascripts/lib/bootstrap-typeahead.js"></script>
+    
   </body>
 </html>
