more unifcation across foundation and boostrap.

--- a/foundation/index.html
+++ b/foundation/index.html
@@ -103,6 +103,7 @@
         <p>Virus/Malware Removal</p>
         <p>Windows Support</p>
         <p>No Solution, No Charge</p>
+        <p>&nbsp</p>
         <p><a class="btn" href="#">View details &raquo;</a></p>
       </div>
     </div>
