--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Sign up for Alveion now!</title>
+    <title>Sign up for @gNosis!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="Fareed Warrad" content="">
@@ -111,11 +111,11 @@
 
       <hr>
 
-        <!-- Jumbotron -->
-      <div class="jumbotron">
+        <!-- Call for Action -->
+      <div class="hero-unit">
         <h1>Sign Up now!</h1>
-        <p class="lead">With our 14 Day Money Back Guarantee, you have nothing to lose!</p>
-        <a class="btn btn-large btn-success" href="#">Sign Up!</a>
+        <p class="lead">With our 14 Day Money Back Guarantee, you have nothing to lose! <a class="btn btn-large btn-success" href="#">Sign Up!</a></p>
+        
       </div>
 
       <hr>
@@ -139,7 +139,7 @@
     </div> <!-- /container -->
 
     <!-- Le javascript --!>
-    ================================================== -->
+
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="javascripts/lib/jquery.js"></script>
     <script src="javascripts/lib/bootstrap-transition.js"></script>
