--- a/foundation/index.html
+++ b/foundation/index.html
@@ -9,7 +9,7 @@
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
 
-  <title>Sign up for Alveion now!</title>
+  <title>Sign up for @gNosis now!</title>
   
   <!-- Included CSS Files (Uncompressed) -->
   <!--
@@ -134,7 +134,7 @@
             
         <div class="row">
           <div class="nine columns">
-            <p>With our 14 Day Money Back Guarantee, you have nothing to lose!</p>
+            <p class="tagline">With our 14 Day Money Back Guarantee, you have nothing to lose! </p>
           </div>
           <div class="three columns">
             <a href="#" class="radius button right">Sign Up!</a>
