Added images to index.html and faq.html in both bootstrap and foundation projects. Added float & text-wrap css code to app.css for both bootstrap and foundation projects.

--- a/bootstrap/faq.html
+++ b/bootstrap/faq.html
@@ -42,6 +42,7 @@
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Sign Up!</a></li>
               </ul>
+              <p class="upper-banner"><img src="images/bannerimage2.png" /></p>
             </div>
           </div>
         </div><!-- /.navbar -->
@@ -56,6 +57,9 @@
       <div class="faq-content">
       
         <h3>Frequently Asked Questions <small>We understand you're going to have questions, therefore we have provided you with some answers to frequently asked questions.</small></h3>
+            <span class="images">
+              <img src="images/confused_dude.jpg">
+            </span>
           <h4>Q.) What is remote support?</h4>
             <p class="faq-font">A.) Remote support is a new technology that allows experienced techs to connect to your computer and "control" it as if</p>
 	          <p class="faq-font">that tech was sitting in front of your machine. This allows us to provide fast superior tech support to you at a reduced</p>
@@ -99,7 +103,7 @@
           <li><a href="#">FAQ</a></li>
           <li><a href="#">Cancel Service</a></li>
       </ul>
-     <p><img src="http://placehold.it/200x870&text=Ad" /></p>
+     <p><img src="images/bannerimage.png" /></p>
     </div>
     </div>
 
