--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -132,6 +132,7 @@
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Sign Up!</a></li>
               </ul>
+              <p class="upper-banner"><img src="images/bannerimage2.png" /></p>
             </div>
           </div>
         </div><!-- /.navbar -->
