--- a/foundation/index.html
+++ b/foundation/index.html
@@ -164,6 +164,7 @@
             <li><a href="#">Service Plans</a></li>
             <li><a href="#">Support</a></li>
           </ul>
+          <p><img src="images/bannerimage2.png" /></p>
         </div>
       </div>
     </div> 
