final commit. Added Google Web Fonts, and sized images to fit layout.

--- a/foundation/faq.html
+++ b/foundation/faq.html
@@ -18,6 +18,7 @@
   
   <!-- Google Webfonts -->
   <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Junge' rel='stylesheet' type='text/css'>
   
   <!-- Included CSS Files (Compressed) -->
   <link rel="stylesheet" href="stylesheets/app/reset.css">
@@ -70,7 +71,7 @@
       
         
         <h3>Frequently Asked Questions <small>We understand you're going to have questions, therefore we have provided you with some answers to frequently asked questions.</small></h3>
-          <span class="images">
+          <span class="text-wrapped-image">
             <img src="images/confused_dude.jpg">
           </span>
           <h4>Q.) What is remote support?</h4>
