--- a/bootstrap/faq.html
+++ b/bootstrap/faq.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="Fareed Warrad" content="">
+    
+  <!-- Google Webfonts -->
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Junge' rel='stylesheet' type='text/css'>
 
     <!-- Le styles -->
+    <link rel="stylesheet" href="stylesheets/app/reset.css">
     <link  href="stylesheets/app/bootstrap.css" rel="stylesheet">
     <link href="stylesheets/app/faq.css" rel="stylesheet">
     <link href="stylesheets/app/app.css" rel="stylesheet">
@@ -19,12 +24,7 @@
       <script src="../assets/js/html5shiv.js"></script>
     <![endif]-->
 
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
+  
   </head>
 
   <body>
@@ -57,7 +57,7 @@
       <div class="faq-content">
       
         <h3>Frequently Asked Questions <small>We understand you're going to have questions, therefore we have provided you with some answers to frequently asked questions.</small></h3>
-            <span class="images">
+            <span class="text-wrapped-image">
               <img src="images/confused_dude.jpg">
             </span>
           <h4>Q.) What is remote support?</h4>
