--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="Fareed Warrad" content="">
+    
+  <!-- Google Webfonts -->
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 
     <!-- Le styles -->
     <link  href="stylesheets/app/bootstrap.css" rel="stylesheet">
@@ -17,13 +20,7 @@
     <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
     <![endif]-->
-
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
+   
   </head>
 
   <body>
@@ -132,7 +129,7 @@
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Sign Up!</a></li>
               </ul>
-              <p class="upper-banner"><img src="images/bannerimage2.png" /></p>
+              <p class="lower-banner"><img src="images/bannerimage2.png" /></p>
             </div>
           </div>
         </div><!-- /.navbar -->
